--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "pharma",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "nodemon app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "all": "^0.0.0",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
-    "express-mysql-session": "^3.0.0",
-    "express-session": "^1.17.3",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "image-size": "^1.1.1",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.1.0",
-    "path": "^0.12.7",
-    "sharp": "^0.30.2"
-  }
+	"name": "pharma",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "nodemon app.js",
+		"build-styles": "npx tailwindcss -i ./public/css/tailwind.css -o ./public/css/styles.css --watch"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"all": "^0.0.0",
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
+		"express": "^4.18.2",
+		"express-mysql-session": "^3.0.0",
+		"express-session": "^1.17.3",
+		"fs": "^0.0.1-security",
+		"http": "^0.0.1-security",
+		"image-size": "^1.1.1",
+		"multer": "^1.4.5-lts.1",
+		"mysql": "^2.18.1",
+		"nodemon": "^3.1.0",
+		"path": "^0.12.7",
+		"sharp": "^0.30.2"
+	},
+	"devDependencies": {
+		"tailwindcss": "^3.4.3"
+	}
 }
